--- a/isItPrime/Base.lproj/Main.storyboard
+++ b/isItPrime/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="isItPrime" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,8 +15,66 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Is your Prime number? Enter your number ..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yfh-RW-BfN">
+                                <rect key="frame" x="52" y="20" width="204" height="110"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="110" id="dR5-qw-tBa"/>
+                                    <constraint firstAttribute="width" constant="204" id="eTn-lv-Pcl"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="number" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zSu-WX-8zu">
+                                <rect key="frame" x="91" y="153" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Q6D-S9-9vA"/>
+                                    <constraint firstAttribute="width" constant="97" id="z64-yb-dlh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lRq-Wb-5UC">
+                                <rect key="frame" x="132" y="239" width="44" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="6if-ej-8qK"/>
+                                    <constraint firstAttribute="width" constant="44" id="Pb4-0T-Hc2"/>
+                                </constraints>
+                                <state key="normal" title="Check">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="checkButtin:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="MqQ-vO-Qlu"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L91-fk-x8T">
+                                <rect key="frame" x="16" y="300" width="269" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="FsD-Em-Upo"/>
+                                    <constraint firstAttribute="width" constant="269" id="Ryc-rp-tr9"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="lRq-Wb-5UC" secondAttribute="centerX" id="2bT-EI-A5R"/>
+                            <constraint firstItem="zSu-WX-8zu" firstAttribute="top" secondItem="Yfh-RW-BfN" secondAttribute="bottom" constant="23" id="Gcu-U4-HOT"/>
+                            <constraint firstAttribute="centerX" secondItem="L91-fk-x8T" secondAttribute="centerX" id="brf-9M-NSx"/>
+                            <constraint firstItem="lRq-Wb-5UC" firstAttribute="top" secondItem="zSu-WX-8zu" secondAttribute="bottom" constant="56" id="gcs-JK-lCL"/>
+                            <constraint firstAttribute="centerX" secondItem="Yfh-RW-BfN" secondAttribute="centerX" id="l2X-t4-WSf"/>
+                            <constraint firstItem="Yfh-RW-BfN" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="le5-yg-Eae"/>
+                            <constraint firstAttribute="centerX" secondItem="zSu-WX-8zu" secondAttribute="centerX" id="vjJ-a8-Gha"/>
+                            <constraint firstItem="L91-fk-x8T" firstAttribute="top" secondItem="lRq-Wb-5UC" secondAttribute="bottom" constant="31" id="wmu-Q6-nYj"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="enteredText" destination="zSu-WX-8zu" id="UwS-lc-Bh1"/>
+                        <outlet property="errorLabel" destination="L91-fk-x8T" id="ik2-c4-ejH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
